--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,25 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA 지원
+	implementation 'org.springframework.boot:spring-boot-starter-security' // 보안
+	implementation 'org.springframework.boot:spring-boot-starter-validation' // 데이터 검증
+	implementation 'org.springframework.boot:spring-boot-starter-mail' // 이메일
+
+	// Lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	// Redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.redisson:redisson-spring-boot-starter:3.23.1'
+
+	// MySQL
+	runtimeOnly 'mysql:mysql-connector-java:8.0.33' // MySQL 드라이버
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc' // JDBC 지원
 }
 
 tasks.named('test') {
